fix: use pynup +cleanup requirements

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,37 +1,4 @@
-aiohttp==3.7.4
-appdirs==1.4.3
-async-timeout==3.0.1
-attrs==20.3.0
-CacheControl==0.12.6
-certifi==2019.11.28
-chardet==3.0.4
-colorama==0.4.3
-contextlib2==0.6.0
-distlib==0.3.0
-distro==1.4.0
-EasyProcess==0.3
-entrypoint2==0.2.3
-html5lib==1.0.1
-idna==2.8
-ipaddr==2.2.0
-jeepney==0.6.0
-keyboard==0.13.5
-lockfile==0.12.2
-msgpack==0.6.2
-mss==6.1.0
-multidict==5.1.0
-packaging==20.3
-pep517==0.8.2
-Pillow==8.1.0
-progress==1.5
-pyparsing==2.4.6
+Pillow==8.4.0
+pynput==1.7.4
 pyscreenshot==2.3
-pytoml==0.1.21
-requests==2.22.0
-retrying==1.3.3
-six==1.14.0
 telepot==12.7
-typing-extensions==3.7.4.3
-urllib3==1.24.1
-webencodings==0.5.1
-yarl==1.6.3
